Fix footer so it doesn't overlap content

--- a/client/src/styles/scss/_app.scss
+++ b/client/src/styles/scss/_app.scss
@@ -1,3 +1,4 @@
+html,
 body {
   @extend .bg-base;
   margin: 0;
